echoserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: test
  labels:
    app: echoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
        - name: echoserver
          image: docker.io/hrushikeshshelar2000/echo:latest2
          imagePullPolicy: Always
          ports:
            - containerPort: 50051
            # - containerPort: 80
          volumeMounts:
          - name: proto-volume
            mountPath: /etc/proto
            readOnly: true
      volumes:
      - name: proto-volume
        configMap:
          name: echo-proto-descriptor

---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: test
spec:
  type: LoadBalancer
  selector:
    app: echoserver
  ports:
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: echoserver-gateway
  namespace: test
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 50051
      name: grpc
      protocol: GRPC
    hosts:
    - "*"
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoserver
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - echoserver-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: echoserver
        port:
          number: 50051
  - match:
    - port: 50051
    route:
    - destination:
        host: echoserver
        port:
          number: 50051
