echoserver-envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: echoserver-grpc-transcoder
  namespace: test
spec:
  workloadSelector:
    labels:
      app: echoserver
  configPatches:
  - applyTo: HTTP_FILTER
    match:
      context: ANY
      listener:
        portNumber: 80
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: INSERT_BEFORE
      value:
        name: envoy.filters.http.grpc_json_transcoder
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
          proto_descriptor_bin: CtMDCgplY2hvLnByb3RvEgRlY2hvIicKC0VjaG9SZXF1ZXN0EhgKB21lc3NhZ2UYASABKAlSB21lc3NhZ2UiKAoMRWNob1Jlc3BvbnNlEhgKB21lc3NhZ2UYASABKAlSB21lc3NhZ2UyNQoERWNobxItCgRFY2hvEhEuZWNoby5FY2hvUmVxdWVzdBoSLmVjaG8uRWNob1Jlc3BvbnNlQgxaCmVjaG8vO2VjaG9KngIKBhIEAAAQAQoICgEMEgMAABIKCAoBAhIDAgANCggKAQgSAwQAIQoJCgIICxIDBAAhCgoKAgYAEgQGAAgBCgoKAwYAARIDBggMCgsKBAYAAgASAwcCLwoMCgUGAAIAARIDBwYKCgwKBQYAAgACEgMHCxYKDAoFBgACAAMSAwchLQoKCgIEABIECgAMAQoKCgMEAAESAwoIEwoLCgQEAAIAEgMLAhUKDAoFBAACAAUS [...]
          services: 
            - "echo.Echo"
          print_options:
            add_whitespace: true
            always_print_primitive_fields: true
            always_print_enums_as_ints: false
            preserve_proto_field_names: false
